# tic-tac-toe

./: .gitignore  CMakeLists.txt  algorithm.cpp  algorithm.h  choice_menu.cpp  choice_menu.h  interface.cpp  interface.h  main.cpp
